--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,7 +32,17 @@ body
 //
 // Example:
 // @linkColor: #ff0000;
-
+legen {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 27px;
+  font-size: 19.5px;
+  line-height: 36px;
+  color: #333333;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+}
 .row 
 {
 	margin-left: 0px;
@@ -845,7 +855,7 @@ td.view_bike_link{
 .result_header
 {
 	position:relative;
-	legend 
+	legen 
 	{
 		border-bottom: 4px solid #006dbc;
 		position: absolute;
@@ -860,7 +870,7 @@ td.view_bike_link{
 {
 	.result_header
 	{
-		legend
+		legen
 		{
 			
 			border-bottom: 4px solid rgb(7, 69, 114);
@@ -880,7 +890,7 @@ td.view_bike_link{
 {
 	.result_header
 	{
-		legend
+		legen
 		{
 			
 			border-bottom: 4px solid #006dbc;
@@ -993,7 +1003,7 @@ td.listing_title
 	}
 }
 
-legend 
+legen 
 {
 	border-bottom: 4px solid #006dbc;
 }
@@ -1092,7 +1102,7 @@ select.sort_select
 	margin-bottom: 15px;
 	padding-bottom: 30px;
 	box-shadow: 10px 2px 10px #888888;
-	legend 
+	legen 
 	{
 		border-bottom: 4px solid #006dbc;
 		margin-bottom: 15px;
@@ -1125,7 +1135,7 @@ select.sort_select
 
 div#send_to_friend
 {
-	legend
+	legen
 	{
 		margin-bottom: 0px
 	}
@@ -1138,7 +1148,7 @@ div.enquiry
 	padding-right: 15px;
 	padding-bottom: 5px;
 	box-shadow: 10px 0px 10px #888888;
-	legend
+	legen
 	{
 		margin-bottom: 0px
 	}
