--- a/app/views/bike_specs/_search_bikes.html.erb
+++ b/app/views/bike_specs/_search_bikes.html.erb
@@ -29,7 +29,7 @@
             <%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant %>
           </td>
           <td>
-            <legend><%= number_to_currency(bike.price,:unit => "Rs ",:precision => 0) %></legend>
+            <legen><%= number_to_currency(bike.price,:unit => "Rs ",:precision => 0) %></legen>
           </td>
         </tr>
         <tr>
