--- a/app/views/bikes/_current_selection.html.erb
+++ b/app/views/bikes/_current_selection.html.erb
@@ -1,6 +1,6 @@
     <div class="current_selection">
         <ul class="nav nav-list"> 
-        <li><legend>Current Selection</legend>  </li>
+        <li><legen>Current Selection</legen>  </li>
 
             <% if @type_selection.nil? and @body_selection.nil? and @make_selection.nil? and @model_selection.nil? and @color_selection.nil? and @location_selection.nil? and @price_from_selection.nil? and @price_to_selection.nil? %>
             <li>No options selected. Please choose one or more options below.
