--- a/app/views/bikes/_main_search_tool.html.erb
+++ b/app/views/bikes/_main_search_tool.html.erb
@@ -1,6 +1,6 @@
   <!--Indentation Complete-->
   <div class = "results_main_page">
-    <legend>Search Bikes</legend>
+    <legen>Search Bikes</legen>
 
         <%=form_tag(search_bikes_path, :method => "get") do %>
 
