--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "bike_new_page">
 
-  <legend>New Bike AD</legend>
+  <legen>New Bike AD</legen>
 
 <%= render :partial => 'form' %>
 </div>
