--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,7 +2,7 @@
 <div class= "span4" id= "edit_login_user_page">
 
 <form class = "enquiry">
-	<legend>Contact Us</legend>
+	<legen>Contact Us</legen>
 	
 	<div class="control-group">
 		<label class="control-label">Name: </label>
