--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
           </div>
         </a>
         <h2>OR</h2>
-<legend>Sign up with Email</legend>
+<legen>Sign up with Email</legen>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
