--- a/app/views/bikes/_enquiry.html.erb
+++ b/app/views/bikes/_enquiry.html.erb
@@ -1,6 +1,6 @@
 <div class = "enquiry">
 <form class = "enquiry">
-	<legend>Bike Enquiry</legend>
+	<legen>Bike Enquiry</legen>
 	
 	<div class="control-group">
 		<label class="control-label">Name: </label>
