--- a/app/views/bikes/_send_to_friend_modal.html.erb
+++ b/app/views/bikes/_send_to_friend_modal.html.erb
@@ -1,7 +1,7 @@
 <div id="send_to_friend" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <legend>Send Email</legend>
+        <legen>Send Email</legen>
       </div>
       <div class="modal-body"><div class= "modal_body">
        <form id= "send_to_friend">
