--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -7,7 +7,7 @@
         <%= render "current_selection"%>   
           <div class="sidebar-nav">
                 <ul class="nav nav-list" id = "selection">
-                     <legend>Refine Search</legend>
+                     <legen>Refine Search</legen>
                     
                     <li><i class="icon-chevron-right"><a></a></i><i class="icon-chevron-up"><a></a></i>Type
                         <ul class = "type">
