--- a/app/views/bike_specs/_current_selection.html.erb
+++ b/app/views/bike_specs/_current_selection.html.erb
@@ -1,6 +1,6 @@
     <div class="current_selection">
         <ul class="nav nav-list">    
- <legen>Current Selection</legen>
+ <div class = "legen">Current Selection</div>
 
 
             
