--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -21,7 +21,7 @@
       <div class= "span8">
         <div class = "row">
           <div class = "main_page_browse_by">
-            <legen>Browse By: Body Type</legen>
+            <div class= "legen">Browse By: Body Type</div>
             <table class= "browse_body_type">
               <tr>
                 <td><a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a></td>
@@ -36,7 +36,7 @@
         </div>
         <div class = "row">
           <div class = "main_page_browse_by">
-            <legen>Browse By: Top Makers</legen>
+            <div class= "legen">Browse By: Top Makers</div>
             <table class= "browse_makers">
               <tr>
                 <td><a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a></td>
@@ -66,7 +66,7 @@
   <div  class= "row">
     <div class= "span6">
       <div class = "main_page_browse_by">
-      <legen>Browse By: Price</legen>
+      <div class= "legen">Browse By: Price</div>
       <table class="browse_price">
         <tr><td>
           <ul>
@@ -94,7 +94,7 @@
     </div>
    <div class= "span6">
       <div class = "main_page_browse_by">
-      <legen>Browse By: Colour</legen>
+      <div class= "legen">Browse By: Colour</div>
       <table class="browse_colour">
         <tr>
           <td><a href="<%=bikes_path(color: "Beige")%>"><div class= "color_box_beige"></div></a></td>
