--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "bike_new_page">
 
-  <legen>New Bike AD</legen>
+  <div class = "legen">New Bike AD</div>
 
 <%= render :partial => 'form' %>
 </div>
