--- a/app/views/how_it_works/index.html.erb
+++ b/app/views/how_it_works/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class= "span2"></div>
 <div class= "span8" id= "edit_login_user_page">
-	<legen>How It Works</legen>
+	<div class = "legen">How It Works</div>
 	Sell  your stuff here!!!
 </div>
