--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,7 +32,7 @@ body
 //
 // Example:
 // @linkColor: #ff0000;
-legen {
+.legen {
   display: block;
   width: 100%;
   padding: 0;
@@ -855,7 +855,7 @@ td.view_bike_link{
 .result_header
 {
 	position:relative;
-	legen 
+	.legen 
 	{
 		border-bottom: 4px solid #006dbc;
 		position: absolute;
@@ -870,7 +870,7 @@ td.view_bike_link{
 {
 	.result_header
 	{
-		legen
+		.legen
 		{
 			
 			border-bottom: 4px solid rgb(7, 69, 114);
@@ -890,7 +890,7 @@ td.view_bike_link{
 {
 	.result_header
 	{
-		legen
+		.legen
 		{
 			
 			border-bottom: 4px solid #006dbc;
@@ -1003,7 +1003,7 @@ td.listing_title
 	}
 }
 
-legen 
+.legen 
 {
 	border-bottom: 4px solid #006dbc;
 }
@@ -1102,7 +1102,7 @@ select.sort_select
 	margin-bottom: 15px;
 	padding-bottom: 30px;
 	box-shadow: 10px 2px 10px #888888;
-	legen 
+	.legen 
 	{
 		border-bottom: 4px solid #006dbc;
 		margin-bottom: 15px;
@@ -1135,7 +1135,7 @@ select.sort_select
 
 div#send_to_friend
 {
-	legen
+	.legen
 	{
 		margin-bottom: 0px
 	}
@@ -1148,7 +1148,7 @@ div.enquiry
 	padding-right: 15px;
 	padding-bottom: 5px;
 	box-shadow: 10px 0px 10px #888888;
-	legen
+	.legen
 	{
 		margin-bottom: 0px
 	}
