--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -1,5 +1,5 @@
 <div class= "span12" id= "edit_login_user_page">
-	<legend>About Us</legend>
+	<div class = "legen">About Us</div>
 	
     <div id="main_about_us">
         
