--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -4,7 +4,7 @@
 <div class = "row" id= "spec_show_page">
  <div class= "row" id= "spec_show_page_header">
  <div class = "span12" >
-<legen><%= @bike_spec.year %>  <%= @bike_spec.make %>  <%= @bike_spec.model %>  <%= @bike_spec.variant %></legen>
+<div class = "legen"><%= @bike_spec.year %>  <%= @bike_spec.make %>  <%= @bike_spec.model %>  <%= @bike_spec.variant %></div>
 </div>
 </div>
 <div class= "row">
@@ -25,9 +25,9 @@
   </div>
     <div class = "span6">
       <div class= "info">
-        <legen>
+        <div class = "legen">
           <%=@bike_spec.make%> <%=@bike_spec.model%>  <div class="fb-like" data-send="true" data-layout="button_count" data-width="45" data-show-faces="false"></div>
-        </legen>
+        </div>
     <table class= "table"><tr>
 
         <td>Bike:</td> 
@@ -88,9 +88,9 @@
     <div class = "result">
    
       <div class = "spec_toggle">
-        <legen>
+        <div class = "legen">
       Bike Details
-    </legen>
+    </div>
       <a id= "basic_info">
         Basic Info 
         <i class="icon-chevron-right"> </i>
@@ -351,7 +351,7 @@
 </div>
 <div class= "span6">
     <div class= "info">
-      <legen>Other Bikes from <%= @bike_spec.make%></legen>
+      <div class = "legen">Other Bikes from <%= @bike_spec.make%></div>
     
     <%@makers_bike.each do |bike|%>
     <a href= "<%=bike_spec_path(bike)%>">
