--- a/app/views/bikes/_enquiry.html.erb
+++ b/app/views/bikes/_enquiry.html.erb
@@ -1,6 +1,6 @@
 <div class = "enquiry">
 <form class = "enquiry">
-	<legen>Bike Enquiry</legen>
+	<div class = "legen">Bike Enquiry</div>
 	
 	<div class="control-group">
 		<label class="control-label">Name: </label>
