--- a/app/views/bikes/_main_search_tool.html.erb
+++ b/app/views/bikes/_main_search_tool.html.erb
@@ -1,6 +1,6 @@
   <!--Indentation Complete-->
   <div class = "results_main_page">
-    <legen>Search Bikes</legen>
+    <div class= "legen">Search Bikes</div>
 
         <%=form_tag(search_bikes_path, :method => "get") do %>
 
