--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -7,7 +7,7 @@
         <%= render "current_selection"%>   
           <div class="sidebar-nav">
                 <ul class="nav nav-list" id = "selection">
-                     <legen>Refine Search</legen>
+                     <div class = "legen">Refine Search</div>
                     
                     <li><i class="icon-chevron-right"><a></a></i><i class="icon-chevron-up"><a></a></i>Type
                         <ul class = "type">
