--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class= "span4"></div>
-<div class= "span4" id= "edit_login_user_page"><legen>Edit Account</legen>
+<div class= "span4" id= "edit_login_user_page"><div class = "legen">Edit Account</div>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
