--- a/app/views/terms_and_conditions/index.html.erb
+++ b/app/views/terms_and_conditions/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class= "span3"></div>
 <div class= "span6" id= "edit_login_user_page">
-	<legen>Terms and Conditions</legen>
+	<div class = "legen">Terms and Conditions</div>
 	Use Wisely!!
 </div>
