--- a/app/assets/javascripts/bikes/index.js.erb
+++ b/app/assets/javascripts/bikes/index.js.erb
@@ -1,6 +1,6 @@
 $('ul#selection.nav.nav-list > li').children().hide(),
 $('.icon-chevron-right').show(),
-
+$('.refine_search').children().show();
 
 
 $('.icon-chevron-up').click(function(){
