--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -868,9 +868,7 @@ td.view_bike_link{
 }
 @media(min-width: 729px)
 {
-	.result_header
-	{
-		.legen
+	.result_header .legen
 		{
 			
 			border-bottom: 4px solid rgb(7, 69, 114);
@@ -884,7 +882,6 @@ td.view_bike_link{
 			border-top-left-radius: 15px;
 			border-bottom-right-radius: 15px;
 		}
-	}
 }
 @media(max-width: 420px)
 {
@@ -1520,4 +1517,10 @@ ul#selection li ul li
 
 #spec_show_page_header {
 margin-top: -27px;
+}
+ul#selection li.refine_search {
+background: white;
+border:none;
+padding: 0;
+margin-bottom: -1.5px;
 }
