--- a/app/views/bike_specs/_search_bikes.html.erb
+++ b/app/views/bike_specs/_search_bikes.html.erb
@@ -46,9 +46,7 @@
               </li>
             </ul> 
           <td class = "view_bike_link">
-            
-            <%= link_to 'View bike',
-                        bike_spec_path(bike.id), :class => 'btn btn-inverse' %>
+            <div  class = 'btn btn-inverse'> View bike </div>
           </td>
         </tr>
       </table>
