--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -6,7 +6,7 @@
         <%= render "current_selection"%>   
           <div class="sidebar-nav">
                 <ul class="nav nav-list" id = "selection">
-                    <div class = "legen">Filters</div>
+                     <li class= "refine_search"><div class = "legen">Refine Search</div></li>
                     <li><i class="icon-chevron-right"><a></a></i><i class="icon-chevron-up"><a></a></i>Body
                         <ul>
                             <% @bodies.each do |body| %>
