--- a/app/views/bike_specs/show.html.erb
+++ b/app/views/bike_specs/show.html.erb
@@ -93,8 +93,8 @@
     </div>
       <a id= "basic_info">
         Basic Info 
-        <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i>
+        <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div>
       </a><div class= "basic_info">
     <table class= "table table-striped">
     <tr>
@@ -176,8 +176,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "dimension">Dimension
-        <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i>
+        <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div>
         </a><div class= "dimension">
 
         <table class= "table table-striped">
@@ -201,8 +201,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "other_spec">Other Specification
-         <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i></a>
+         <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div></a>
         <div class= "other_spec">
         <table class= "table table-striped">
       <tr>
@@ -265,8 +265,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "safety">Active and Passive Safety
-         <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i></a>
+         <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div></a>
       <div class= "safety">
       <table class= "table table-striped">
         <td>Suspension Front</td>
@@ -297,8 +297,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "comfort">Comfort and Convienience
-         <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i></a>
+         <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div></a>
         <div class= "comfort">
         <table class= "table table-striped">
 
