--- a/app/views/bikes/_bike_specs.html.erb
+++ b/app/views/bikes/_bike_specs.html.erb
@@ -3,8 +3,8 @@
       <div class = "spec_toggle">
       <a id= "basic_info">
         Basic Info 
-        <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i>
+        <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div>
       </a><div class= "basic_info">
     <table class= "table table-striped">
     <tr>
@@ -86,8 +86,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "dimension">Dimension
-        <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i>
+        <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div>
         </a><div class= "dimension">
 
         <table class= "table table-striped">
@@ -111,8 +111,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "other_spec">Other Specification
-         <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i></a>
+         <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div></a>
         <div class= "other_spec">
         <table class= "table table-striped">
       <tr>
@@ -175,8 +175,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "safety">Active and Passive Safety
-         <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i></a>
+         <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div></a>
       <div class= "safety">
       <table class= "table table-striped">
         <td>Suspension Front</td>
@@ -207,8 +207,8 @@
       </div></div>
       <div class = "spec_toggle">
         <a id= "comfort">Comfort and Convienience
-         <i class="icon-chevron-right"> </i>
-        <i class="icon-chevron-up"> </i></a>
+         <div class="icon-chevron-right"> </div>
+        <div class="icon-chevron-up"> </div></a>
         <div class= "comfort">
         <table class= "table table-striped">
 
