--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -7,30 +7,30 @@
 
     <div class = "toolbox">
       <div class = "legen">Toolbox</div>
-      <i class = " icon-chevron-left"> </i> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
+      <div class = " icon-chevron-left"> </div> <%= link_to " Back to search", bikes_path(sort: params[:sort], :direction => params[:direction], type: params[:type],body: params[:body], make: params[:make], model: params[:model], color: params[:color], location: params[:location])%>
       <div class = "save_search">
         <% if current_user and current_user.favourites.where(bike_id: @bike.id).empty?%>
-        <i class = "icon-star"></i><a id= "save_search" style="cursor:pointer"> Save Search</a>
+        <div class = "icon-star"></div><a id= "save_search" style="cursor:pointer"> Save Search</a>
         <%elsif !current_user%>
-        <i class = "icon-star"></i>
+        <div class = "icon-star"></div>
         <a href="#" data-toggle="tooltip" title="Sign in First" style="cursor:pointer">Save Search</a>
         <%else%>
         Saved
         <%end%>
       </div>
       <div>
-        <a href="#send_to_friend" data-toggle="modal"><i class= "icon-envelope"></i> Send to Friend</a>
+        <a href="#send_to_friend" data-toggle="modal"><div class= "icon-envelope"></div> Send to Friend</a>
       </div>
       <div class="alert alert-success"> <button type="button" class="close" data-dismiss="alert">&times;</button>
           This page has been emailed to your friend</div>
       <div><a id = "share" style="cursor:pointer">
-        <i class = "icon-share"> </i>Share on Facebook
+        <div class = "icon-share"> </div>Share on Facebook
       </a>
     </div>
     <% if @bike.user==current_user%>
-    <div><i class = "icon-edit"></i><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
+    <div><div class = "icon-edit"></div><%= link_to ' Edit this Post', edit_bike_path(@bike) %></div>
     <div>
-      <i class = "icon-trash"></i><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
+      <div class = "icon-trash"></div><%= link_to ' Remove this Post',bike_path(@bike),:method => 'delete',
       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) %>
     </div>  
     <%end%>
@@ -153,8 +153,8 @@
   <div class="span6" id= "bike_spec_span_padding">
     <div class="span12" id= "bike_spec_span">
       <div class = "legen">
-        <a href="<%bikes_path(@bike)%>" data-remote="true" id="more">Bike Info <i class= "icon-chevron-down"> </i></a>
-        <a id = "less"> Bike Info <i class= "icon-chevron-down"> </i><i class= "icon-chevron-up"> </i></a>
+        <a href="<%bikes_path(@bike)%>" data-remote="true" id="more">Bike Info <div class= "icon-chevron-down"> </div></a>
+        <a id = "less"> Bike Info <div class= "icon-chevron-down"> </div><div class= "icon-chevron-up"> </div></a>
       </div>
     </div>
   </div>
