--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -22,34 +22,34 @@
         <div class = "row">
           <div class = "main_page_browse_by">
             <div class= "legen">Browse By: Body Type</div>
-            <table class= "browse_body_type">
-              <tr>
-                <td><a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a></td>
-                <td><a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a></td>
-                <td><a href = '<%=bikes_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a></td>
-                <td><a href = "<%=bikes_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a></td>
-                <td><a href = "<%=bikes_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a></td>
-                <td><a href = '<%=bikes_path(body: "Trail")%>'><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a></td>
-              </tr> 
-            </table>  
+            <div class= "browse_body_type">
+              
+                <a href = '<%=bikes_path(body: "Cruiser")%>'><div class= "image_border"><%=image_tag "cruiser.jpg", size: "95x80"%>Cruiser</div></a>
+                <a href = '<%=bikes_path(body: "Scooter")%>'><div class= "image_border"><%= image_tag "scooters.jpg", size: "95x80"%>Scooter</div></a>
+                <a href = '<%=bikes_path(body: "Sports")%>'><div class= "image_border"><%= image_tag "sport.jpg", size: "95x80"%>Sport</div></a>
+                <a href = "<%=bikes_path(body: 'Super Sport')%>"><div class= "image_border"><%= image_tag "supersport.jpg", size: "95x80"%>Super Sport</div></a>
+                <a href = "<%=bikes_path(body: 'Standard')%>"><div class= "image_border"><%= image_tag "standard.jpg", size: "95x80"%>Standard</div></a>
+                <a href = '<%=bikes_path(body: "Trail")%>'><div class= "image_border"><%= image_tag "trail.jpg", size: "95x80"%>Trail</div></a>
+               
+            </div>  
           </div><!--main_page_browse_by-->
         </div>
         <div class = "row">
           <div class = "main_page_browse_by">
             <div class= "legen">Browse By: Top Makers</div>
-            <table class= "browse_makers">
-              <tr>
-                <td><a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a></td>
-                <td><a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a></td>
-                <td><a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a></td>
-                <td><a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a></td>
-                <td><a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a></td>
-                <td><a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a></td>
-                <td><a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a></td>
-                <td><a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a></td>
-                <td><a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a></td>
-              </tr> 
-            </table>  
+            <div class= "browse_makers">
+              
+                <a href = '<%=bikes_path(make: "Bajaj")%>'><div class= "image_border"><%=image_tag "bajaj.jpg", size: "40x40"%>Bajaj</div></a>
+                <a href = '<%=bikes_path(make: "Daelim")%>'><div class= "image_border"><%= image_tag "daelim.jpg", size: "40x40"%>Daelim</div></a>
+                <a href = '<%=bikes_path(make: "Hero Honda")%>'><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "40x40"%>Hero</div></a>
+                <a href = "<%=bikes_path(make: 'Honda')%>"><div class= "image_border"><%= image_tag "honda.jpg", size: "40x40"%>Honda</div></a>
+                <a href = "<%=bikes_path(make: 'Hyosung')%>"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "40x40"%>Hyosung</div></a>
+                <a href = "<%=bikes_path(make: 'Royal Enfield')%>"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "40x40"%>Enfield</div></a>
+                <a href = '<%=bikes_path(make: "Suzuki")%>'><div class= "image_border"><%= image_tag "suzuki.jpg", size: "40x40"%>Suzuki</div></a>
+                <a href = '<%=bikes_path(make: "TVS")%>'><div class= "image_border"><%= image_tag "tvs.jpg", size: "40x40"%>TVS</div></a>
+                <a href = '<%=bikes_path(make: "Yamaha")%>'><div class= "image_border"><%= image_tag "yamaha.jpg", size: "40x40"%>Yamaha</div></a>
+               
+            </div>  
           </div><!--main_page_browse_by-->
     </div>
     </div>
@@ -67,8 +67,8 @@
     <div class= "span6">
       <div class = "main_page_browse_by">
       <div class= "legen">Browse By: Price</div>
-      <table class="browse_price">
-        <tr><td>
+      <div class="browse_price">
+        
           <ul>
             <li><%= link_to "Up to Rs. 10,000",bikes_path(price_from: "0", price_to: "10001")%></li>
             <li><%= link_to "Rs. 10,000 to Rs. 25,000",bikes_path(price_from: "9999", price_to: "25001")%></li>
@@ -78,8 +78,8 @@
             <li><%= link_to "Rs. 1,00,000 to Rs. 1,50,000",bikes_path(price_from: "99999", price_to: "150001")%></li>
           </ul>
 
-        </td>
-        <td>
+        
+        
           <ul>
             <li><%= link_to "Rs. 1,50,000 to Rs. 2,00,000",bikes_path(price_from: "149999", price_to: "200001")%></li>
             <li><%= link_to "Rs. 2,00,000 to Rs. 3,00,000",bikes_path(price_from: "199999", price_to: "300001")%></li>
@@ -88,55 +88,55 @@
             <li><%= link_to "Rs. 5,00,000 to Rs. 10,00,000",bikes_path(price_from: "499999", price_to: "1000001")%></li>
             <li><%= link_to "More than Rs. 10,00,000",bikes_path(price_from: "999999", price_to: nil)%></li>
           </ul>
-        </td>
-      </tr></table>
+        
+      </div>
       </div>
     </div>
    <div class= "span6">
       <div class = "main_page_browse_by">
       <div class= "legen">Browse By: Colour</div>
-      <table class="browse_colour">
-        <tr>
-          <td><a href="<%=bikes_path(color: "Beige")%>"><div class= "color_box_beige"></div></a></td>
-          <td><%= link_to "Beige", bikes_path(color: "Beige")%></td>
-          <td><a href="<%=bikes_path(color: "Black")%>"><div class= "color_box_black"></div></a></td>
-          <td><%= link_to "Black", bikes_path(color: "Black")%></td>
-          <td><a href="<%=bikes_path(color: "Blue")%>"><div class= "color_box_blue"></div></a></td>
-          <td><%= link_to "Blue", bikes_path(color: "Blue")%></td>
-          <td><a href="<%=bikes_path(color: "Bronze")%>"><div class= "color_box_bronze"></div></a></td>
-          <td><%= link_to "Bronze", bikes_path(color: "Bronze")%></td>
-        </tr>
-        <tr>
-          <td><a href="<%=bikes_path(color: "Brown")%>"><div class= "color_box_brown"></div></a></td>
-          <td><%= link_to "Brown", bikes_path(color: "Brown")%></td>
-          <td><a href="<%=bikes_path(color: "Gold")%>"><div class= "color_box_gold"></div></a></td>
-          <td><%= link_to "Gold", bikes_path(color: "Gold")%></td>
-          <td><a href="<%=bikes_path(color: "Green")%>"><div class= "color_box_green"></div></a></td>
-          <td><%= link_to "Green", bikes_path(color: "Green")%></td>
-          <td><a href="<%=bikes_path(color: "Grey")%>"><div class= "color_box_grey"></div></a></td>
-          <td><%= link_to "Grey", bikes_path(color: "Grey")%></td>
-        </tr>      <tr>
-          <td><a href="<%=bikes_path(color: "Maroon")%>"><div class= "color_box_maroon"></div></a></td>
-          <td><%= link_to "Maroon", bikes_path(color: "Maroon")%></td>
-          <td><a href="<%=bikes_path(color: "Orange")%>"><div class= "color_box_orange"></div></a></td>
-          <td><%= link_to "Orange", bikes_path(color: "Orange")%></td>
-          <td><a href="<%=bikes_path(color: "Pink")%>"><div class= "color_box_pink"></div></a></td>
-          <td><%= link_to "Pink", bikes_path(color: "Pink")%></td>
-          <td><a href="<%=bikes_path(color: "Purple")%>"><div class= "color_box_purple"></div></a></td>
-          <td><%= link_to "Purple", bikes_path(color: "Purple")%></td>
-        </tr>      <tr>
-          <td><a href="<%=bikes_path(color: "Red")%>"><div class= "color_box_red"></div></a></td>
-          <td><%= link_to "Red", bikes_path(color: "Red")%></td>
-          <td><a href="<%=bikes_path(color: "Silver")%>"><div class= "color_box_silver"></div></a></td>
-          <td><%= link_to "Silver", bikes_path(color: "Silver")%></td>
-          <td><a href="<%=bikes_path(color: "White")%>"><div class= "color_box_white"></div></a></td>
-          <td><%= link_to "White", bikes_path(color: "White")%></td>
-          <td><a href="<%=bikes_path(color: "Yellow")%>"><div class= "color_box_yellow"></div></a></td>
-          <td><%= link_to "Yellow", bikes_path(color: "Yellow")%></td>
-        </tr>
+      <div class="browse_colour">
+        
+          <a href="<%=bikes_path(color: "Beige")%>"><div class= "color_box_beige"></div></a>
+          <%= link_to "Beige", bikes_path(color: "Beige")%>
+          <a href="<%=bikes_path(color: "Black")%>"><div class= "color_box_black"></div></a>
+          <%= link_to "Black", bikes_path(color: "Black")%>
+          <a href="<%=bikes_path(color: "Blue")%>"><div class= "color_box_blue"></div></a>
+          <%= link_to "Blue", bikes_path(color: "Blue")%>
+          <a href="<%=bikes_path(color: "Bronze")%>"><div class= "color_box_bronze"></div></a>
+          <%= link_to "Bronze", bikes_path(color: "Bronze")%>
+        
+        
+          <a href="<%=bikes_path(color: "Brown")%>"><div class= "color_box_brown"></div></a>
+          <%= link_to "Brown", bikes_path(color: "Brown")%>
+          <a href="<%=bikes_path(color: "Gold")%>"><div class= "color_box_gold"></div></a>
+          <%= link_to "Gold", bikes_path(color: "Gold")%>
+          <a href="<%=bikes_path(color: "Green")%>"><div class= "color_box_green"></div></a>
+          <%= link_to "Green", bikes_path(color: "Green")%>
+          <a href="<%=bikes_path(color: "Grey")%>"><div class= "color_box_grey"></div></a>
+          <%= link_to "Grey", bikes_path(color: "Grey")%>
+              
+          <a href="<%=bikes_path(color: "Maroon")%>"><div class= "color_box_maroon"></div></a>
+          <%= link_to "Maroon", bikes_path(color: "Maroon")%>
+          <a href="<%=bikes_path(color: "Orange")%>"><div class= "color_box_orange"></div></a>
+          <%= link_to "Orange", bikes_path(color: "Orange")%>
+          <a href="<%=bikes_path(color: "Pink")%>"><div class= "color_box_pink"></div></a>
+          <%= link_to "Pink", bikes_path(color: "Pink")%>
+          <a href="<%=bikes_path(color: "Purple")%>"><div class= "color_box_purple"></div></a>
+          <%= link_to "Purple", bikes_path(color: "Purple")%>
+              
+          <a href="<%=bikes_path(color: "Red")%>"><div class= "color_box_red"></div></a>
+          <%= link_to "Red", bikes_path(color: "Red")%>
+          <a href="<%=bikes_path(color: "Silver")%>"><div class= "color_box_silver"></div></a>
+          <%= link_to "Silver", bikes_path(color: "Silver")%>
+          <a href="<%=bikes_path(color: "White")%>"><div class= "color_box_white"></div></a>
+          <%= link_to "White", bikes_path(color: "White")%>
+          <a href="<%=bikes_path(color: "Yellow")%>"><div class= "color_box_yellow"></div></a>
+          <%= link_to "Yellow", bikes_path(color: "Yellow")%>
+        
 
 
-      </table>
+      </div>
       </div>
     </div>
     </div><!--row-->
